eww -> bar: Fixed systray spacing

--- a/bar/eww/bar/style.scss
+++ b/bar/eww/bar/style.scss
@@ -43,6 +43,7 @@
 
   .systray {
     margin: 0px;
+    margin-left: 6px;
 
     & > menuitem {
       menu {
